frontend/test/should_fail/ret_016.grg
rule r : (Node) {
	x: Node;
	y: Node;

	modify {
	}
}
